--- a/src/components/JourneysView/JourneysView.module.scss
+++ b/src/components/JourneysView/JourneysView.module.scss
@@ -7,7 +7,31 @@
     .grid_wrapper {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-column: 1 / span 5;
         width: 100%;
+        .data_headers {
+            cursor: pointer;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            grid-column: 1 / span 5;
+            margin: 0;
+            user-select: none;
+            width: 100%;
+            .data_header {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                padding: 1rem 0;
+                .sort_icon {
+                    max-height: 20px;
+                    max-width: 20px;
+                }
+            }
+        }
+        .grid_card {
+            display: grid;
+            grid-column: 1 / span 5;
+            grid-row: 2 / auto;
+        }
     }
 }
