--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
   --theme-gray: #333333;
   --theme-light-gray: #cccccc;
   --theme-even-lighter-gray: #e9e9e9;
+  --theme-red: #5f1515;
 
   font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
