--- a/src/components/StationView/StationView.module.scss
+++ b/src/components/StationView/StationView.module.scss
@@ -7,5 +7,22 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         width: 100%;
+        .data_headers {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-column: 1 / span 4;
+            margin: 0;
+            user-select: none;
+            width: 100%;
+            .data_header {
+                text-align: center;
+                padding: 1rem 0;
+            }
+        }
+        .grid_card {
+            display: grid;
+            grid-column: 1 / span 4;
+            grid-row: 2 / auto;
+        }
     }
 }
