Tired brain + typofixing, continue tomorrow

--- a/src/components/NavigationList/NavigationList.module.scss
+++ b/src/components/NavigationList/NavigationList.module.scss
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     a {
-        color: #ccc;
+        color: var(--theme-gray);
         font-size: 1.5rem;
         padding: 0.4rem 0.3rem;
         text-decoration: none;
