--- a/src/components/NavigationList/NavigationList.module.scss
+++ b/src/components/NavigationList/NavigationList.module.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 1.5rem 0;
     width: 100%;
     a {
         color: var(--theme-gray);
