--- a/src/components/SortingHeader/SortingHeader.module.scss
+++ b/src/components/SortingHeader/SortingHeader.module.scss
@@ -1,4 +1,6 @@
-.data_header {
+.sorting_header {
+    background: var(--theme-gray);
+    color: var(--theme-off-white);
     display: flex;
     align-items: center;
     justify-content: center;
