--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,8 @@
   --theme-gray: #333333;
   --theme-light-gray: #cccccc;
   --theme-even-lighter-gray: #e9e9e9;
-  --theme-red: #5f1515;
+  --theme-off-white: #e9e9e9;
+  --theme-red: #f7f9f1;
 
   font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
