--- a/src/components/JourneyDetail/JourneyDetail.module.scss
+++ b/src/components/JourneyDetail/JourneyDetail.module.scss
@@ -14,10 +14,10 @@
         padding: 0.2rem;
         place-self: center stretch;
         margin: 0;
-        .margin_number {
-            color: var(--theme-red);
+        .header_number {
+            color: var(--theme-yellow);
             place-self: center stretch;
-            padding: 0.2rem 0 0.2rem 0.3rem;
+            padding: 0.2rem 0 0.2rem 0;
         }
     }
     div {
