--- a/src/components/NavigationList/NavigationList.module.scss
+++ b/src/components/NavigationList/NavigationList.module.scss
@@ -3,13 +3,31 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 1.5rem 0;
+    padding: 1.5rem 0 0 0;
     width: 100%;
     a {
+        border-top: 1px dashed var(--theme-gray);
         color: var(--theme-gray);
+        display: flex;
+        align-items: center;
+        justify-content: center;
         font-size: 1.5rem;
         padding: 0.4rem 0.3rem;
         text-decoration: none;
         text-transform: uppercase;
+        width: 50%;
+        svg {
+            padding: 0 0.8rem;
+        }
+        &:nth-child(even) {
+            border-left: 1px dashed var(--theme-gray);
+        }
+        &:hover {
+            background: var(--theme-yellow);
+            color: var(--theme-gray);
+        }
+        &.active {
+            background: var(--theme-yellow);
+        }
     }
 }
