--- a/src/components/StationView/StationView.module.scss
+++ b/src/components/StationView/StationView.module.scss
@@ -8,6 +8,8 @@
         grid-template-columns: repeat(4, 1fr);
         width: 100%;
         .data_headers {
+            background: var(--theme-gray);
+            color: var(--theme-off-white);
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-column: 1 / span 4;
