--- a/src/index.scss
+++ b/src/index.scss
@@ -15,4 +15,28 @@
   -moz-osx-font-smoothing: grayscale;
   background: #1f1f1f;
   color: #ffffff;
+  .homepage_wrapper {
+    background: var(--theme-gray);
+    color: var(--theme-off-white);
+    padding: 4rem;
+    .welcome_message {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .welcome {
+        text-align: center;
+        font-weight: 800;
+        margin-bottom: 2rem;
+      }
+      > p {
+        margin: 0;
+        line-height: 1.5rem;
+      }
+      .right {
+        padding-top: 1rem;
+        place-self: end;
+      }
+    }
+  }
 }
