--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 1.5rem;
     width: 100%;
     h1 {
         a {
