--- a/src/components/JourneyDetail/JourneyDetail.module.scss
+++ b/src/components/JourneyDetail/JourneyDetail.module.scss
@@ -28,3 +28,11 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .journey_detail {
+        h3 {
+            font-size: 1rem;
+        }  
+    } 
+}
