--- a/src/components/StationDetail/StationDetail.module.scss
+++ b/src/components/StationDetail/StationDetail.module.scss
@@ -40,3 +40,11 @@
     }
    }
 }
+
+@media only screen and (max-width: 768px) {
+    .station_detail {
+        h3 {
+            font-size: 1rem;
+        }  
+    } 
+}
